[package]
name = "ionql"
version = "0.1.0"
authors = ["dzejkop <jakubtrad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.9.0"
argh = "0.1.4"
ion = "0.8.8"
anyhow = "1.0.40"
itertools = "0.10.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
maplit = "1.0.2"
directories = "3.0.2"
